(Trello ID: AjOEhdTt) endpoint to disable account created
