# src/api/src/docs/swagger.json
@@ -393,6 +393,9 @@
 							"type": "string"
 						}
 					},
+					"204": {
+						"description": "No content"
+					},
 					"500": {
 						"description": "The user no longer exists",
 						"schema": {
@@ -400,7 +403,7 @@
 						}
 					}
 				},
-				"description": "* This endpoint is for removing a professional user when authenticated. It is not removed from the database, it changes its state to 0.",
+				"description": "* This endpoint is for remove a professional user when authenticated. It is removed from the database.",
 				"tags": [
 					"Professional Users"
 				],
@@ -501,6 +504,46 @@
 						"format": "double"
 					}
 				]
+			}
+		},
+		"/api/professional_user/disable": {
+			"put": {
+				"operationId": "ProfessionalUserDisableAccount",
+				"produces": [
+					"text/html"
+				],
+				"responses": {
+					"200": {
+						"description": "Disabled user",
+						"schema": {
+							"type": "string"
+						}
+					},
+					"204": {
+						"description": "No content"
+					},
+					"500": {
+						"description": "The user no longer exists",
+						"schema": {
+							"type": "string"
+						}
+					}
+				},
+				"description": "* This endpoint is for disable a professional user when authenticated. It is not removed from the database, it changes its state to 0.",
+				"tags": [
+					"Professional Users"
+				],
+				"security": [
+					{
+						"default": [
+							"x-auth"
+						]
+					}
+				],
+				"consumes": [
+					"application/json"
+				],
+				"parameters": []
 			}
 		}
 	},
